Added comment editing

--- a/angularapp/src/app/comment-section/comment-section.component.css
+++ b/angularapp/src/app/comment-section/comment-section.component.css
@@ -36,6 +36,8 @@ mat-card-content, mat-card-title {
 	overflow-wrap: anywhere;
 }
 
-.delete-button {
+.comment-options {
 	float: right;
+	display: flex;
+	align-items: center;
 }
