--- a/angularapp/src/app/nav-menu/nav-menu.component.css
+++ b/angularapp/src/app/nav-menu/nav-menu.component.css
@@ -19,3 +19,10 @@
 	display: flex;
 	align-items: center;
 }
+
+
+@media only screen and (max-width: 600px) {
+	.post-type-navigation {
+		display: none;
+	}
+}
