Fixed tables not being full width

--- a/angularapp/src/app/profile/profile.component.css
+++ b/angularapp/src/app/profile/profile.component.css
@@ -64,6 +64,10 @@ mat-accordion mat-expansion-panel:last-of-type {
 	justify-content: space-between;
 }
 
+.table-container {
+	overflow-x: auto;
+}
+
 table {
 	margin-top: 2px;
 	border-radius: 10px;
