--- a/angularapp/src/app/profile/profile.component.html
+++ b/angularapp/src/app/profile/profile.component.html
@@ -113,9 +113,8 @@
                 <mat-expansion-panel-header>
                     <mat-panel-title>View post history</mat-panel-title>
                 </mat-expansion-panel-header>
-                <div>
+                <div class="table-container">
                     <table mat-table [dataSource]="postDataSource">
-
                         <ng-container matColumnDef="title">
                             <th mat-header-cell *matHeaderCellDef> Post </th>
                             <td mat-cell *matCellDef="let element" title="{{element.title}}"> {{element.title}} </td>
@@ -145,17 +144,17 @@
                             [routerLink]="['/post/' + row.id]"
                             *matRowDef="let row; columns: displayedPostHistoryColumns;"></tr>
                     </table>
-                    <mat-paginator #postPaginator
-                                   [pageSizeOptions]="[5, 10, 20]"
-                                   showFirstLastButtons>
-                    </mat-paginator>
                 </div>
+                <mat-paginator #postPaginator
+                               [pageSizeOptions]="[5, 10, 20]"
+                               showFirstLastButtons>
+                </mat-paginator>
             </mat-expansion-panel>
             <mat-expansion-panel>
                 <mat-expansion-panel-header>
                     <mat-panel-title>View comment history</mat-panel-title>
                 </mat-expansion-panel-header>
-                <div>
+                <div class="table-container">
                     <table mat-table [dataSource]="commentDataSource">
                         <ng-container matColumnDef="postTitle">
                             <th mat-header-cell *matHeaderCellDef> Post </th>
@@ -186,11 +185,11 @@
                             [routerLink]="['/post/' + row.postId]"
                             *matRowDef="let row; columns: displayedCommentHistoryColumns;"></tr>
                     </table>
-                    <mat-paginator #commentPaginator
-                                   [pageSizeOptions]="[5, 10, 20]"
-                                   showFirstLastButtons>
-                    </mat-paginator>
                 </div>
+                <mat-paginator #commentPaginator
+                               [pageSizeOptions]="[5, 10, 20]"
+                               showFirstLastButtons>
+                </mat-paginator>
             </mat-expansion-panel>
         </mat-accordion>
     </div>
