--- a/angularapp/src/app/control-panel/control-panel.component.html
+++ b/angularapp/src/app/control-panel/control-panel.component.html
@@ -29,34 +29,34 @@
             <input matInput (keyup)="filterDataSource($event, postDataSource)">
         </mat-form-field>
         <div class="table-container">
-            <table mat-table [dataSource]="postDataSource">
+            <table mat-table matSort #postTable [dataSource]="postDataSource">
                 <ng-container matColumnDef="title">
-                    <th mat-header-cell *matHeaderCellDef> Post </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Post </th>
                     <td mat-cell *matCellDef="let element" title="{{element.title}}"> {{element.title}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="postType">
-                    <th mat-header-cell *matHeaderCellDef> Type </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Type </th>
                     <td mat-cell *matCellDef="let element" title="{{element.postType}}"> {{element.postType}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="author">
-                    <th mat-header-cell *matHeaderCellDef> Author </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Author </th>
                     <td mat-cell *matCellDef="let element" title="{{element.author}}"> {{element.author}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="commentCount">
-                    <th mat-header-cell *matHeaderCellDef> Comments </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Comments </th>
                     <td mat-cell *matCellDef="let element" title="{{element.commentCount}}"> {{element.commentCount}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="voteCount">
-                    <th mat-header-cell *matHeaderCellDef> Votes </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Votes </th>
                     <td mat-cell *matCellDef="let element" title="{{element.voteCount}}"> {{element.voteCount}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="createdOn">
-                    <th mat-header-cell *matHeaderCellDef> Created on </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Created on </th>
                     <td class="date-row" mat-cell *matCellDef="let element"
                         title="{{element.createdOn.toLocaleDateString() + ' ' + element.createdOn.toLocaleTimeString()}}">
                         <div class="time-passed-date">{{dateHelperService.getTimePassedString(element.createdOn, currentTime)}}</div>
@@ -95,34 +95,34 @@
             <input matInput (keyup)="filterDataSource($event, commentDataSource)">
         </mat-form-field>
         <div class="table-container">
-            <table mat-table [dataSource]="commentDataSource">
+            <table mat-table matSort #commentTable [dataSource]="commentDataSource">
                 <ng-container matColumnDef="content">
-                    <th mat-header-cell *matHeaderCellDef> Content </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Content </th>
                     <td mat-cell *matCellDef="let element" title="{{element.content ?? '[Deleted]'}}"> {{element.content ?? '[Deleted]'}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="postTitle">
-                    <th mat-header-cell *matHeaderCellDef> Post </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Post </th>
                     <td mat-cell *matCellDef="let element" title="{{element.postTitle}}"> {{element.postTitle}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="author">
-                    <th mat-header-cell *matHeaderCellDef> Author </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Author </th>
                     <td mat-cell *matCellDef="let element" title="{{element.author ?? '[Deleted]'}}"> {{element.author ?? '[Deleted]'}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="replyCount">
-                    <th mat-header-cell *matHeaderCellDef> Replies </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Replies </th>
                     <td mat-cell *matCellDef="let element" title="{{element.replyCount}}"> {{element.replyCount}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="voteCount">
-                    <th mat-header-cell *matHeaderCellDef> Votes </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Votes </th>
                     <td mat-cell *matCellDef="let element" title="{{element.voteCount}}"> {{element.voteCount}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="createdOn">
-                    <th mat-header-cell *matHeaderCellDef> Created on </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Created on </th>
                     <td class="date-row" mat-cell *matCellDef="let element"
                         title="{{element.createdOn.toLocaleDateString() + ' ' + element.createdOn.toLocaleTimeString()}}">
                         <div class="time-passed-date">{{dateHelperService.getTimePassedString(element.createdOn, currentTime)}}</div>
@@ -162,34 +162,34 @@
         </mat-form-field>
 
         <div class="table-container">
-            <table mat-table [dataSource]="userDataSource">
+            <table mat-table matSort #userTable [dataSource]="userDataSource">
                 <ng-container matColumnDef="username">
-                    <th mat-header-cell *matHeaderCellDef> Username </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Username </th>
                     <td mat-cell *matCellDef="let element" title="{{element.username}}"> {{element.username}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="email">
-                    <th mat-header-cell *matHeaderCellDef> E-mail </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> E-mail </th>
                     <td mat-cell *matCellDef="let element" title="{{element.email}}"> {{element.email}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="isAdmin">
-                    <th mat-header-cell *matHeaderCellDef> IsAdmin </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> IsAdmin </th>
                     <td mat-cell *matCellDef="let element" title="{{element.isAdmin ? 'Yes' : 'No'}}"> {{element.isAdmin ? 'Yes' : 'No'}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="commentCount">
-                    <th mat-header-cell *matHeaderCellDef> Comments </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Comments </th>
                     <td mat-cell *matCellDef="let element" title="{{element.commentCount}}"> {{element.commentCount}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="postCount">
-                    <th mat-header-cell *matHeaderCellDef> Posts </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Posts </th>
                     <td mat-cell *matCellDef="let element" title="{{element.postCount}}"> {{element.postCount}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="createdOn">
-                    <th mat-header-cell *matHeaderCellDef> Created on </th>
+                    <th mat-header-cell mat-sort-header *matHeaderCellDef> Created on </th>
                     <td class="date-row" mat-cell *matCellDef="let element"
                         title="{{element.createdOn.toLocaleDateString() + ' ' + element.createdOn.toLocaleTimeString()}}">
                         <div class="time-passed-date">{{dateHelperService.getTimePassedString(element.createdOn, currentTime)}}</div>
